--- a/css/responsive.css
+++ b/css/responsive.css
@@ -9,12 +9,14 @@
         background-position: center;
       }
       .kitten {
-        width: 100%;
-        height: 100vh;
+        position: absolute;
+        width: 58%;
+        height: 300px;
         background-image: url('../assets/img/kitten-large.png');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
+        bottom: 0;
         }
     }
     
@@ -29,12 +31,14 @@
             background-position: center;
         }
         .kitten {
-            width: 20%;
-            height: 20vh;
+            position: absolute;
+            width: 40%;
+            height: 400px;
             background-image: url('../assets/img/kitten-small.png');
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
+            bottom: 0;
         }
     }
     
@@ -49,12 +53,14 @@
             background-position: center;
           }
           .kitten {
-            width: 100%;
-            height: 100vh;
+            position: absolute;
+            width: 50%;
+            height: 300px;
             background-image: url('../assets/img/kitten-medium.png');
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
+            bottom: 0;
         }
     }
     
@@ -68,14 +74,16 @@
             background-size: cover;
             background-position: center;
           }
-        .kitten {
-            width: 100%;
-            height: 100vh;
+          .kitten {
+            position: absolute;
+            width: 50%;
+            height: 300px;
             background-image: url('../assets/img/kitten-large.png');
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
-        }
+            bottom: 0;
+            }
     }
     
     /* Portrait phones and smaller */
@@ -83,17 +91,19 @@
         .landscape {
             width: 100%;
             height: 100vh;
-            background-image: url('../assets/img/sunny-day.png');
+            background-image: url('../assets/img/night.jpg');
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
-          }
-          .kitten {
-            width: 100%;
-            height: 100vh;
-            background-image: url('../assets/img/kitten-medium.png');
+        }
+        .kitten {
+            position: absolute;
+            width: 40%;
+            height: 400px;
+            background-image: url('../assets/img/kitten-small.png');
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
+            bottom: 0;
         }
     }
