--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,6 @@
 /* Large desktops and laptops */
 @media (min-width: 1200px) {
+    /* Dawn */
     .landscape {
         width: 100%;
         height: 100vh;
@@ -22,6 +23,7 @@
     
 /* Landscape tablets and medium desktops */
     @media (min-width: 992px) and (max-width: 1199px) {
+        /* Night */
         .landscape {
             width: 100%;
             height: 100vh;
@@ -44,6 +46,7 @@
     
 /* Portrait tablets and small desktops */
     @media (min-width: 768px) and (max-width: 991px) {
+        /* Sunny day */
         .landscape {
             width: 100%;
             height: 100vh;
@@ -66,6 +69,7 @@
     
     /* Landscape phones and portrait tablets */
     @media (max-width: 767px) {
+        /* Dawn */
         .landscape {
             width: 100%;
             height: 100vh;
@@ -88,6 +92,7 @@
     
     /* Portrait phones and smaller */
     @media (max-width: 480px) {
+        /* Night */
         .landscape {
             width: 100%;
             height: 100vh;
